--- a/composer.json
+++ b/composer.json
@@ -1,28 +1,34 @@
 {
-    "name": "khusanov/yii2-ddd",
-    "description": "DDD in yii2",
-    "type": "project",
-    "authors": [
-        {
-            "name": "Akmal",
-            "email": "khusanovdev@gmail.com"
-        }
-    ],
-    "require": {
-        "php": ">=8.0",
-        "ramsey/uuid": "^4.1"
-    },
-    "require-dev": {
-        "phpunit/phpunit": ">=9.3.8"
-    },
-    "autoload": {
-        "psr-4": {
-            "App\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Test\\":"tests/"
-        }
+  "config": {
+    "sort-packeges": true
+  },
+  "name": "khusanov/yii2-ddd",
+  "description": "DDD in yii2",
+  "type": "project",
+  "authors": [
+    {
+      "name": "Akmal",
+      "email": "khusanovdev@gmail.com"
     }
+  ],
+  "require": {
+    "php": ">=7.4",
+    "ramsey/uuid": "^4.1"
+  },
+  "require-dev": {
+    "phpunit/phpunit": ">=9.3.8"
+  },
+  "autoload": {
+    "psr-4": {
+      "App\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Test\\": "tests/"
+    }
+  },
+  "scripts": {
+    "test": "phpunit --colors=always"
+  }
 }
