--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: 7.4
-          tools: composer:v2
+          tools: composer:v2, phpunit
 
       - name: Determine composer cache dir
         run: echo "COMPOSER_CACHE_DIR"=$(composer config cache-dir) >> $GITHUB_ENV
@@ -33,4 +33,4 @@ jobs:
         run: composer update --prefer-dist --no-interaction --no-progress --optimize-autoloader --ansi
 
       - name: Run tests with phpunit
-        run: ./vindor/bin/phpunit --colors=always
+        run: vindor/bin/phpunit --colors=always
